# compositional-sparse-ood

./: .gitignore  1_toy_ood_sae_clean.ipynb  404.html  8_highD_clean.ipynb  8_highD_clean_Isa.ipynb  CITATION.cff  LICENSE  README.md  analyze_results.py  bash_test_pytorch.sh  cshl.sh  data.py  david_demo.py  grid_search.py  index.html  mila_cpu.sh  mila_slurm.sh  mkdocs.yml  plots.ipynb  pyproject.toml  run.py  setup.py  toy.ipynb  try.ipynb
api/: index.html
data/: index.html
docs/: api.md  data.md  index.md  methods.md
experiments/: _common.py  param_check.py
isa_results/: 1_toy_ood_testing_mlp_sae.ipynb  sae_plots.py  saving_data.py
methods/: index.html
models/: __init__.py  linear_probe.py  saes.py  sparse_coding.py
notebooks/: 10_highD_sparse_coding_clean.ipynb  1_toy_ood_sae_clean.ipynb  8_highD_clean.ipynb  8_highD_clean_Isa.ipynb  dict_var.ipynb  sparse_high_d.ipynb
real_data/: analysis_clean.ipynb  sem_sup_sparse_code_mp_clean.py
results/: exp_dict_quality_diagnostics_n100.json  exp_dict_quality_diagnostics_n1000.json  exp_dict_quality_diagnostics_n10000.json  exp_dict_quality_diagnostics_n50.json  exp_dict_quality_diagnostics_n500.json  exp_dict_quality_diagnostics_n5000.json  exp_dict_quality_n100.json  exp_dict_quality_n1000.json  exp_dict_quality_n10000.json  exp_dict_quality_n50.json  exp_dict_quality_n500.json  exp_dict_quality_n5000.json  exp_frozen_decoder.json  exp_frozen_decoder_10k.json  exp_lambda_sensitivity_n100.json  exp_lambda_sensitivity_n1000.json  exp_lambda_sensitivity_n10000.json  exp_lambda_sensitivity_n50.json  (+39 more)
(+116 files in other folders)
